--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'application'
     id 'checkstyle'
     id 'jacoco'
+    id "com.github.johnrengelman.shadow" version "8.1.1"
 }
 
 group = 'hexlet.code'
@@ -11,7 +12,20 @@ repositories {
     mavenCentral()
 }
 
+application {
+    mainClass = 'hexlet.code.App'
+}
+
 dependencies {
+    implementation 'io.javalin:javalin:5.6.2'
+    implementation 'io.javalin:javalin-rendering:5.6.2'
+    implementation 'io.javalin:javalin-bundle:5.6.2'
+
+    implementation 'org.slf4j:slf4j-simple:2.0.9'
+
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+
+
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
