--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ application {
 }
 
 dependencies {
-    implementation 'io.javalin:javalin:5.6.2'
+    implementation 'io.javalin:javalin:5.6.3'
     implementation 'io.javalin:javalin-rendering:5.6.2'
     implementation 'io.javalin:javalin-bundle:5.6.2'
 
@@ -25,8 +25,11 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok:1.18.30'
 
+    implementation 'com.h2database:h2:2.2.224'
+    implementation 'com.zaxxer:HikariCP:5.0.1'
 
-    testImplementation platform('org.junit:junit-bom:5.9.1')
+
+    testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
