--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'checkstyle'
     id 'jacoco'
     id "com.github.johnrengelman.shadow" version "8.1.1"
-    id "io.freefair.lombok" version "8.3"
 }
 
 group = 'hexlet.code'
@@ -21,10 +20,11 @@ dependencies {
     implementation 'io.javalin:javalin:5.6.3'
     implementation 'io.javalin:javalin-rendering:5.6.2'
     implementation 'io.javalin:javalin-bundle:5.6.2'
-
+    implementation 'gg.jte:jte:3.1.2'
     implementation 'org.slf4j:slf4j-simple:2.0.9'
 
- //   compileOnly 'org.projectlombok:lombok:1.18.30'
+    compileOnly("org.projectlombok:lombok:1.18.24")
+    annotationProcessor("org.projectlombok:lombok:1.18.24")
 
     implementation 'com.h2database:h2:2.2.224'
     implementation 'com.zaxxer:HikariCP:5.0.1'
