--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,11 @@ dependencies {
     implementation 'com.h2database:h2:2.2.224'
     implementation 'com.zaxxer:HikariCP:5.0.1'
 
+    implementation 'com.konghq:unirest-java:3.14.5'
+    implementation("org.jsoup:jsoup:1.16.1")
+
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.11.0'
+
     testImplementation 'org.assertj:assertj-core:3.24.2'
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
