--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'checkstyle'
     id 'jacoco'
     id "com.github.johnrengelman.shadow" version "8.1.1"
+    id 'com.adarshr.test-logger' version '3.2.0'
 }
 
 group = 'hexlet.code'
@@ -48,4 +49,7 @@ jacocoTestReport {
     reports {
         xml.required = true
     }
+}
+testlogger {
+    showStandardStreams true
 }
