--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compileOnly("org.projectlombok:lombok:1.18.24")
     annotationProcessor("org.projectlombok:lombok:1.18.24")
 
+    implementation 'org.postgresql:postgresql:42.7.0'
     implementation 'com.h2database:h2:2.2.224'
     implementation 'com.zaxxer:HikariCP:5.0.1'
 
